# vite-plugin-electron

./: .gitignore  .oxfmtrc.json  AGENTS.md  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/skills/coding-conventions/: SKILL.md
.github/skills/testing/: SKILL.md
.github/workflows/: docs-pages.yml
docs/: .gitignore  README.md  mkdocs.yml  pyproject.toml  zensical.toml
docs/docs/: architecture.md  getting-started.md  guide.md  index.md  options.md  scope.md  vscode-debug.md
example-multiple/: README.md
example-multiple/desktop/: .gitignore  electron-builder.json5  package.json  tsconfig.json  vite.config.ts
example-multiple/desktop/src/: create-window.ts  main.ts  preload.ts
example-multiple/electron-api/: index.d.ts  package.json
example-multiple/web/: README.md  package.json  vite.config.ts
example-multiple/web/src/: electron-api.d.ts
example-single/: README.md  electron-builder.json5  index.html  package.json  vite.config.ts
example-single/electron/: main.ts  preload.ts  start-app.ts
example-single/src/: App.tsx  electron-api.d.ts
