[project]
name = "vite-plugin-electron"
version = "0.2.0-beta.1"
description = "Vite 8 Environment API based plugin for integrating Electron main/preload build"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[dependency-groups]
dev = [
    "mkdocs<2",
    "mkdocs-material>=9.7.6",
]
